# TuPy-Data-Engineering

./: .gitignore  INIT.sh  LICENSE  README.md  pyproject.toml  requirements.txt
datasets/: fortuna_binary.csv  fortuna_hierarchy.csv  leite_binary.csv  leite_hierarchy.csv  oliveira_binary.csv  oliveira_hierarchy.csv  vargas_binary.csv  vargas_hierarchy.csv
figures/: share_of_agressive_and_hate_for_reseracher.csv  share_of_category_of_hate_for_reseracher.csv  share_of_category_of_hate_general.csv
models/: autokeras_model.pkl  autosklearn.ipynb  metrics.ipynb  multimodel.ipynb  ruan_huggingface.ipynb  teste_pkl.ipynb
models/flagged/: log.csv
models/result_tests/bertimbau_base/: BERTimbau_base_sample.csv  BERTimbau_base_str_1.csv  BERTimbau_base_str_10.csv  BERTimbau_base_str_10_hate.csv  BERTimbau_base_str_2.csv  BERTimbau_base_str_20.csv
models/result_tests/bertimbau_large/: BERTimbau_large_sample.csv  BERTimbau_large_str.csv  BERTimbau_large_str_10.csv  BERTimbau_large_str_10_hate.csv  BERTimbau_large_str_2.csv  BERTimbau_large_str_20.csv
models/text_classifier/: graph  oracle.json
notebooks/: LSM.ipynb  analysis_graphs.ipynb  analysis_ngrams.ipynb  analysis_tables.ipynb  charts_ngrams.ipynb  charts_ngrams2.ipynb  exploratory data analysis.ipynb  exploratory data analysis2.ipynb  graphs.ipynb  graphs2.ipynb  tables.ipynb  tfidf_forest.ipynb  tfidf_svc.ipynb  tfidf_tree.ipynb
src/figures/: words_dist_plot.py
src/model/: evaluate_autokera.py  evaluate_autokeras.py
src/text/: words_counter.py
tests/: test_words_counter.py
(+12 files in other folders)
